# habbit_tracker

./: .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
habbit_tracker_app/: apps.py  serializers.py  tasks.py  tests.py  urls.py  views.py
habbit_tracker_app/migrations/: 0001_initial.py  0002_initial.py
users/: serializers.py  views.py
users/migrations/: 0001_initial.py
